// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries service when listing log entries will perform a basic search 1`] = `
[
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1230,
        "hePercent": undefined,
        "material": "fe",
        "name": "relieved comfortable",
        "o2Percent": 35.6,
        "pressureUnit": "psi",
        "startPressure": 3270,
        "volume": 18,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-06-06T11:40:52",
      "timezone": "Asia/Hebron",
    },
    "id": "5d2d1e99-7eb8-48f4-bece-6da91c1f93e3",
    "site": "damp forsaken chapter",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 790,
        "hePercent": undefined,
        "material": "fe",
        "name": "inborn whelp",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 2830,
        "volume": 11,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-05-23T17:18:05",
      "timezone": "Asia/Macau",
    },
    "id": "183854c7-ce3a-4646-9b81-f28af540302a",
    "site": "offensive monumental teapot",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 64.6144794691354,
        "hePercent": undefined,
        "material": "fe",
        "name": "flimsy job",
        "o2Percent": 25,
        "pressureUnit": "bar",
        "startPressure": 216.8209884990938,
        "volume": 4,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-05-11T14:01:32",
      "timezone": "Pacific/Noumea",
    },
    "id": "d6a578dd-e49c-475c-a31b-657d1443a4a3",
    "site": "piercing joyful hospitality",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1030,
        "hePercent": undefined,
        "material": "fe",
        "name": "rich quiet",
        "o2Percent": 21.7,
        "pressureUnit": "psi",
        "startPressure": 3470,
        "volume": 12,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-05-09T06:43:36",
      "timezone": "Pacific/Auckland",
    },
    "id": "2e75b4b9-2f3a-42b7-8137-c25768582d76",
    "site": "wonderful useful magnet",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1070,
        "hePercent": undefined,
        "material": "fe",
        "name": "late residence",
        "o2Percent": 25.5,
        "pressureUnit": "psi",
        "startPressure": 2930,
        "volume": 15,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-05-05T11:56:55",
      "timezone": "Pacific/Efate",
    },
    "id": "f744534a-99b2-48bc-a081-636189d81871",
    "site": "specific dead ramen",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 550,
        "hePercent": undefined,
        "material": "al",
        "name": "past lament",
        "o2Percent": 37.3,
        "pressureUnit": "psi",
        "startPressure": 3140,
        "volume": 4,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-04-29T00:32:36",
      "timezone": "America/North_Dakota/Beulah",
    },
    "id": "dcfb5adb-ee15-4741-a2e9-482cc4467fb6",
    "site": "tattered worn graffiti",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 840,
        "hePercent": undefined,
        "material": "fe",
        "name": "new carotene",
        "o2Percent": 39.3,
        "pressureUnit": "psi",
        "startPressure": 3030,
        "volume": 15,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-04-28T01:35:07",
      "timezone": "Africa/Kinshasa",
    },
    "id": "c5e1b02c-86e2-4e84-bcc3-f53b054d3ecf",
    "site": "mixed honest workforce",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 54.0895917697344,
        "hePercent": undefined,
        "material": "fe",
        "name": "bulky spotlight",
        "o2Percent": 26.9,
        "pressureUnit": "bar",
        "startPressure": 200.83647158229724,
        "volume": 18,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-04-26T12:20:33",
      "timezone": "Asia/Baghdad",
    },
    "id": "36fb40c0-2738-4b62-9158-3ee90bd684e6",
    "site": "wonderful useful magnet",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1040,
        "hePercent": undefined,
        "material": "al",
        "name": "thoughtful lipid",
        "o2Percent": 33,
        "pressureUnit": "psi",
        "startPressure": 2900,
        "volume": 11,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-04-17T18:04:48",
      "timezone": "Europe/Athens",
    },
    "id": "6a074039-7efd-4efd-93cd-6991e391e309",
    "site": "caring nutty grub",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 63.4507405734621,
        "hePercent": undefined,
        "material": "al",
        "name": "trustworthy motor",
        "o2Percent": 33.1,
        "pressureUnit": "bar",
        "startPressure": 230.56524627376348,
        "volume": 4,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2024-04-13T11:21:10",
      "timezone": "Pacific/Guam",
    },
    "id": "99347e59-18be-4c6a-b164-3379c26485f2",
    "site": "quiet complete current",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 68.5776526723057,
        "hePercent": undefined,
        "material": "al",
        "name": "unequaled shofar",
        "o2Percent": 22.9,
        "pressureUnit": "bar",
        "startPressure": 215.05205869674683,
        "volume": 12,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-04-12T13:26:08",
      "timezone": "Asia/Sakhalin",
    },
    "id": "f3a5f32f-9f32-4eb1-aaa6-192ce2ed4e55",
    "site": "yummy clever option",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 33.80974882701412,
        "hePercent": undefined,
        "material": "al",
        "name": "humiliating picnic",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 197.48641160316765,
        "volume": 18,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-04-06T09:45:31",
      "timezone": "America/Matamoros",
    },
    "id": "e210eeea-643c-4a36-85a5-d8ea243b22f5",
    "site": "powerful shrill savannah",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 590,
        "hePercent": undefined,
        "material": "al",
        "name": "high voter",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 2880,
        "volume": 12,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-04-04T23:46:08",
      "timezone": "America/Guatemala",
    },
    "id": "f090639a-ddf7-4fe3-813a-d37906f21b24",
    "site": "another submissive subconscious",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 48.067411622498184,
        "hePercent": undefined,
        "material": "al",
        "name": "unfit period",
        "o2Percent": 32.9,
        "pressureUnit": "bar",
        "startPressure": 195.40415736613795,
        "volume": 4,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-04-04T20:00:59",
      "timezone": "Africa/Kinshasa",
    },
    "id": "c2ae9ce3-bdaa-4fa7-99b5-96f1cc2d4b2c",
    "site": "delightful female toad",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 890,
        "hePercent": undefined,
        "material": "fe",
        "name": "lazy pathology",
        "o2Percent": 32.9,
        "pressureUnit": "psi",
        "startPressure": 3260,
        "volume": 12,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2024-04-04T02:16:50",
      "timezone": "America/Fortaleza",
    },
    "id": "b69cbcb2-4c3a-459f-ab96-96d5972325f3",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 670,
        "hePercent": undefined,
        "material": "fe",
        "name": "hateful daddy",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 3450,
        "volume": 15,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-04-02T18:10:29",
      "timezone": "Africa/Lome",
    },
    "id": "a656d48e-0c36-4fda-a5e7-39ae1d1161ed",
    "site": "untrue sparse comics",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 48.38533349707723,
        "hePercent": undefined,
        "material": "fe",
        "name": "all sanctity",
        "o2Percent": 31.2,
        "pressureUnit": "bar",
        "startPressure": 234.26753863226622,
        "volume": 12,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-04-02T08:38:29",
      "timezone": "Atlantic/St_Helena",
    },
    "id": "7d41cc06-babc-424f-aed8-601dfc214535",
    "site": "acidic similar juggernaut",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 33.20037852227688,
        "hePercent": undefined,
        "material": "al",
        "name": "ill excursion",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 217.0482239429839,
        "volume": 12,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-03-27T14:49:32",
      "timezone": "Europe/Ljubljana",
    },
    "id": "e18158e7-c51a-4984-bb8a-9a3305111509",
    "site": "normal brown pinot",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 46.632221571402624,
        "hePercent": undefined,
        "material": "fe",
        "name": "firsthand timer",
        "o2Percent": 29.3,
        "pressureUnit": "bar",
        "startPressure": 223.586291980464,
        "volume": 4,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-03-27T13:10:34",
      "timezone": "America/Noronha",
    },
    "id": "8a8d5834-9f12-4ecc-a8e1-d83199418caa",
    "site": "snarling round astrolabe",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1080,
        "hePercent": undefined,
        "material": "fe",
        "name": "conventional parameter",
        "o2Percent": 25.3,
        "pressureUnit": "psi",
        "startPressure": 2930,
        "volume": 12,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-03-26T21:35:28",
      "timezone": "Asia/Taipei",
    },
    "id": "ffe037ca-aeb2-4b42-af71-f89db2161d37",
    "site": "deadly idealistic gerbil",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 1210,
        "hePercent": undefined,
        "material": "al",
        "name": "shoddy ox",
        "o2Percent": 26.3,
        "pressureUnit": "psi",
        "startPressure": 2810,
        "volume": 4,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2024-03-25T00:44:57",
      "timezone": "America/Marigot",
    },
    "id": "7d63383e-66db-4390-ad4a-b8ccd45ed5f6",
    "site": "wobbly immaculate pear",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 1090,
        "hePercent": undefined,
        "material": "al",
        "name": "crisp accordion",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 3040,
        "volume": 4,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-03-24T21:14:13",
      "timezone": "Asia/Khandyga",
    },
    "id": "41db9904-ef0c-4dcd-8e27-4295098d6a10",
    "site": "extra-small plain trader",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 53.89134261966683,
        "hePercent": undefined,
        "material": "al",
        "name": "easy pleasure",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 211.05587627738714,
        "volume": 4,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-03-24T17:14:19",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "2b952128-0c77-4ed4-b7de-00d316da7e88",
    "site": "exotic warmhearted aside",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 940,
        "hePercent": undefined,
        "material": "al",
        "name": "loose clan",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 3230,
        "volume": 12,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-03-21T12:11:29",
      "timezone": "Africa/Sao_Tome",
    },
    "id": "c32989ce-ba33-4fc5-ab94-c477dd559d40",
    "site": "deadly lean mobile",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 75.38865056890063,
        "hePercent": undefined,
        "material": "al",
        "name": "adorable family",
        "o2Percent": 29.8,
        "pressureUnit": "bar",
        "startPressure": 224.17931165313348,
        "volume": 4,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-03-21T08:04:05",
      "timezone": "Africa/Monrovia",
    },
    "id": "f0c13aca-632a-4683-a66f-d59f2e6bb233",
    "site": "frail each ferret",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 49.522062180098146,
        "hePercent": undefined,
        "material": "fe",
        "name": "judicious fish",
        "o2Percent": 26.2,
        "pressureUnit": "bar",
        "startPressure": 238.7100652884692,
        "volume": 15,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-03-18T18:40:41",
      "timezone": "Australia/Darwin",
    },
    "id": "e097b921-8fb3-40bb-88ca-79800db16541",
    "site": "worrisome this expectation",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1010,
        "hePercent": undefined,
        "material": "al",
        "name": "mushy acetate",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 3120,
        "volume": 12,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-03-14T07:06:05",
      "timezone": "Africa/Maseru",
    },
    "id": "1258bb56-9f90-4514-a765-42f887bcd1e6",
    "site": "rude ajar aggradation",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 710,
        "hePercent": undefined,
        "material": "fe",
        "name": "rough restriction",
        "o2Percent": 28.8,
        "pressureUnit": "psi",
        "startPressure": 3410,
        "volume": 11,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-02-27T00:27:12",
      "timezone": "Pacific/Chatham",
    },
    "id": "94a6ef72-1458-4833-88c1-6847951e0b1a",
    "site": "bewitched all turnstile",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 75.8959227183368,
        "hePercent": undefined,
        "material": "al",
        "name": "imperturbable midline",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 195.0043898401782,
        "volume": 4,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-02-25T19:19:23",
      "timezone": "America/Sitka",
    },
    "id": "112ed3eb-4c02-4eb2-9a1d-0ef3d1580a80",
    "site": "peaceful well-worn intention",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 55.05941932229325,
        "hePercent": undefined,
        "material": "fe",
        "name": "mediocre level",
        "o2Percent": 36.1,
        "pressureUnit": "bar",
        "startPressure": 198.57106044422835,
        "volume": 18,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2024-02-12T04:00:15",
      "timezone": "Africa/Mogadishu",
    },
    "id": "697c640a-e5b7-47fe-bcb4-7ab3d6c8fe8b",
    "site": "frightened blond beak",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 70.79884186387062,
        "hePercent": undefined,
        "material": "fe",
        "name": "polished markup",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 223.18914806004614,
        "volume": 18,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-02-11T12:25:35",
      "timezone": "Asia/Kamchatka",
    },
    "id": "110b1760-6d4c-47f9-bf78-026431cd129f",
    "site": "caring nutty grub",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 68.99052356486209,
        "hePercent": undefined,
        "material": "al",
        "name": "live overhead",
        "o2Percent": 35.2,
        "pressureUnit": "bar",
        "startPressure": 195.55047902744263,
        "volume": 4,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2024-02-07T19:10:41",
      "timezone": "America/Miquelon",
    },
    "id": "9647950b-fe14-4010-afef-766ef9d6b75e",
    "site": "dark heavy boss",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 42.090994285885245,
        "hePercent": undefined,
        "material": "al",
        "name": "husky rocket",
        "o2Percent": 29.4,
        "pressureUnit": "bar",
        "startPressure": 234.41866509150714,
        "volume": 15,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-01-28T06:20:52",
      "timezone": "Europe/Jersey",
    },
    "id": "7477e7b0-5d16-4d01-94d8-0661e3c9ec65",
    "site": "wilted extra-small anterior",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 580,
        "hePercent": 10.2,
        "material": "fe",
        "name": "upbeat sympathy",
        "o2Percent": 38.4,
        "pressureUnit": "psi",
        "startPressure": 3270,
        "volume": 18,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-01-24T01:00:00",
      "timezone": "Asia/Anadyr",
    },
    "id": "b33dc346-3f9e-4d77-bb4c-2e5a1f220e96",
    "site": "concerned specific printing",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1140,
        "hePercent": undefined,
        "material": "al",
        "name": "flickering floozie",
        "o2Percent": 21.7,
        "pressureUnit": "psi",
        "startPressure": 3210,
        "volume": 15,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-01-19T17:48:03",
      "timezone": "America/Argentina/Rio_Gallegos",
    },
    "id": "0272e1a8-9664-45c6-9610-5a1733077cca",
    "site": "mediocre upset commodity",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 900,
        "hePercent": undefined,
        "material": "al",
        "name": "impish downturn",
        "o2Percent": 25.8,
        "pressureUnit": "psi",
        "startPressure": 3310,
        "volume": 12,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2024-01-10T01:48:39",
      "timezone": "America/Argentina/San_Luis",
    },
    "id": "0e5e8c41-b1cc-453f-8ae6-b5fabefe8aab",
    "site": "silky dental dragon",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 70.396193345543,
        "hePercent": undefined,
        "material": "al",
        "name": "bustling icy",
        "o2Percent": 23.9,
        "pressureUnit": "bar",
        "startPressure": 202.75305345188826,
        "volume": 12,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2024-01-09T19:34:56",
      "timezone": "America/Fort_Nelson",
    },
    "id": "57f9d2cf-819f-4ce9-b148-3c2007695714",
    "site": "cultured pointless glass",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 42.67111267428845,
        "hePercent": undefined,
        "material": "al",
        "name": "sophisticated silver",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 234.01437853230163,
        "volume": 4,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2024-01-09T06:05:56",
      "timezone": "Africa/Lagos",
    },
    "id": "e4d1089c-081f-486b-9fd4-200317180754",
    "site": "original pitiful resource",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 1200,
        "hePercent": undefined,
        "material": "al",
        "name": "crazy plover",
        "o2Percent": 24.8,
        "pressureUnit": "psi",
        "startPressure": 3170,
        "volume": 15,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2024-01-07T19:45:58",
      "timezone": "Africa/Porto-Novo",
    },
    "id": "d675b414-c335-47db-8969-8d735707c994",
    "site": "utter extraneous calm",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 60.978877454064786,
        "hePercent": undefined,
        "material": "fe",
        "name": "svelte pouch",
        "o2Percent": undefined,
        "pressureUnit": "bar",
        "startPressure": 236.9522689236328,
        "volume": 11,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-12-24T15:31:10",
      "timezone": "Atlantic/Azores",
    },
    "id": "411d372a-14db-4c7d-9486-a62a839e7ada",
    "site": "knowledgeable oily sweatshirt",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 57.38919317093678,
        "hePercent": undefined,
        "material": "al",
        "name": "alive swath",
        "o2Percent": 39.6,
        "pressureUnit": "bar",
        "startPressure": 206.23628021916375,
        "volume": 18,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2023-12-19T16:13:13",
      "timezone": "Pacific/Kosrae",
    },
    "id": "24d678ec-7c2c-4b9a-b0f4-a568e26f85e1",
    "site": "shameful glorious noodles",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 33.04889299417846,
        "hePercent": undefined,
        "material": "al",
        "name": "definitive implementation",
        "o2Percent": 31.6,
        "pressureUnit": "bar",
        "startPressure": 196.93507300456986,
        "volume": 4,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-12-16T00:38:47",
      "timezone": "America/Cambridge_Bay",
    },
    "id": "3c39c3ae-0623-4f6c-adaf-40a4b9facbee",
    "site": "rapid flustered revenue",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 54.56818872783333,
        "hePercent": undefined,
        "material": "al",
        "name": "warlike minister",
        "o2Percent": 25.4,
        "pressureUnit": "bar",
        "startPressure": 239.53678195597604,
        "volume": 15,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-12-15T09:52:53",
      "timezone": "Pacific/Fakaofo",
    },
    "id": "003743c6-b5af-490c-8235-204751ac2798",
    "site": "uniform strict periodical",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 560,
        "hePercent": undefined,
        "material": "al",
        "name": "brisk substitution",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 2820,
        "volume": 15,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-12-13T07:35:00",
      "timezone": "America/Dawson_Creek",
    },
    "id": "f6ec63ba-5cd7-4726-b347-ca178ca8dc60",
    "site": "deadly idealistic gerbil",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 500,
        "hePercent": undefined,
        "material": "al",
        "name": "uncomfortable mechanic",
        "o2Percent": 28.7,
        "pressureUnit": "psi",
        "startPressure": 3240,
        "volume": 12,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-12-08T20:06:04",
      "timezone": "Europe/Moscow",
    },
    "id": "c788bc9d-ba97-4dd7-a5cc-1ca090071b9d",
    "site": "deadly lean mobile",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 600,
        "hePercent": undefined,
        "material": "fe",
        "name": "plain running",
        "o2Percent": 33.5,
        "pressureUnit": "psi",
        "startPressure": 3160,
        "volume": 12,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-12-08T02:08:34",
      "timezone": "America/Montevideo",
    },
    "id": "2a79cb25-b13b-4c8b-bf8d-6ea3d5381fb3",
    "site": "meaty weird good",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 940,
        "hePercent": undefined,
        "material": "fe",
        "name": "best pace",
        "o2Percent": 21.4,
        "pressureUnit": "psi",
        "startPressure": 3130,
        "volume": 12,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-12-04T16:54:22",
      "timezone": "Antarctica/Macquarie",
    },
    "id": "00eb9e5c-d321-4504-8079-7e393ef6487d",
    "site": "rosy slow hiking",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 710,
        "hePercent": undefined,
        "material": "al",
        "name": "loose coyote",
        "o2Percent": 28.3,
        "pressureUnit": "psi",
        "startPressure": 3100,
        "volume": 11,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2023-11-20T22:53:58",
      "timezone": "America/Argentina/Buenos_Aires",
    },
    "id": "3ada4e53-ec8b-4f2f-ae7a-ad15e951dc2d",
    "site": "other necessary fedora",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 39.70994417369366,
        "hePercent": undefined,
        "material": "al",
        "name": "flat timpani",
        "o2Percent": 39.2,
        "pressureUnit": "bar",
        "startPressure": 195.75074764201418,
        "volume": 12,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2023-11-19T23:18:41",
      "timezone": "America/Detroit",
    },
    "id": "a9e030c6-dc58-4161-8cda-741a14c0c67b",
    "site": "well-worn upbeat trillion",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 960,
        "hePercent": undefined,
        "material": "fe",
        "name": "frayed snowsuit",
        "o2Percent": undefined,
        "pressureUnit": "psi",
        "startPressure": 3470,
        "volume": 4,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2023-11-19T15:21:08",
      "timezone": "Atlantic/Stanley",
    },
    "id": "1a56e685-82dc-4a6e-9d56-0773fb732384",
    "site": "fluffy pricey tool",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries after a start date 1`] = `
[
  {
    "entryTime": {
      "date": "2024-06-06T11:40:52",
      "timezone": "Asia/Hebron",
    },
    "id": "5d2d1e99-7eb8-48f4-bece-6da91c1f93e3",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2024-05-23T17:18:05",
      "timezone": "Asia/Macau",
    },
    "id": "183854c7-ce3a-4646-9b81-f28af540302a",
    "site": "offensive monumental teapot",
  },
  {
    "entryTime": {
      "date": "2024-05-11T14:01:32",
      "timezone": "Pacific/Noumea",
    },
    "id": "d6a578dd-e49c-475c-a31b-657d1443a4a3",
    "site": "piercing joyful hospitality",
  },
  {
    "entryTime": {
      "date": "2024-05-09T06:43:36",
      "timezone": "Pacific/Auckland",
    },
    "id": "2e75b4b9-2f3a-42b7-8137-c25768582d76",
    "site": "wonderful useful magnet",
  },
  {
    "entryTime": {
      "date": "2024-05-05T11:56:55",
      "timezone": "Pacific/Efate",
    },
    "id": "f744534a-99b2-48bc-a081-636189d81871",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-04-29T00:32:36",
      "timezone": "America/North_Dakota/Beulah",
    },
    "id": "dcfb5adb-ee15-4741-a2e9-482cc4467fb6",
    "site": "tattered worn graffiti",
  },
  {
    "entryTime": {
      "date": "2024-04-28T01:35:07",
      "timezone": "Africa/Kinshasa",
    },
    "id": "c5e1b02c-86e2-4e84-bcc3-f53b054d3ecf",
    "site": "mixed honest workforce",
  },
  {
    "entryTime": {
      "date": "2024-04-26T12:20:33",
      "timezone": "Asia/Baghdad",
    },
    "id": "36fb40c0-2738-4b62-9158-3ee90bd684e6",
    "site": "wonderful useful magnet",
  },
  {
    "entryTime": {
      "date": "2024-04-17T18:04:48",
      "timezone": "Europe/Athens",
    },
    "id": "6a074039-7efd-4efd-93cd-6991e391e309",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-04-13T11:21:10",
      "timezone": "Pacific/Guam",
    },
    "id": "99347e59-18be-4c6a-b164-3379c26485f2",
    "site": "quiet complete current",
  },
  {
    "entryTime": {
      "date": "2024-04-12T13:26:08",
      "timezone": "Asia/Sakhalin",
    },
    "id": "f3a5f32f-9f32-4eb1-aaa6-192ce2ed4e55",
    "site": "yummy clever option",
  },
  {
    "entryTime": {
      "date": "2024-04-06T09:45:31",
      "timezone": "America/Matamoros",
    },
    "id": "e210eeea-643c-4a36-85a5-d8ea243b22f5",
    "site": "powerful shrill savannah",
  },
  {
    "entryTime": {
      "date": "2024-04-04T23:46:08",
      "timezone": "America/Guatemala",
    },
    "id": "f090639a-ddf7-4fe3-813a-d37906f21b24",
    "site": "another submissive subconscious",
  },
  {
    "entryTime": {
      "date": "2024-04-04T20:00:59",
      "timezone": "Africa/Kinshasa",
    },
    "id": "c2ae9ce3-bdaa-4fa7-99b5-96f1cc2d4b2c",
    "site": "delightful female toad",
  },
  {
    "entryTime": {
      "date": "2024-04-04T02:16:50",
      "timezone": "America/Fortaleza",
    },
    "id": "b69cbcb2-4c3a-459f-ab96-96d5972325f3",
    "site": "old-fashioned unwieldy cartridge",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries before an end date 1`] = `
[
  {
    "entryTime": {
      "date": "2023-09-22T17:13:37",
      "timezone": "Asia/Dubai",
    },
    "id": "cecea137-0a0e-4f21-b86b-bd670aa9503e",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-09-21T09:11:57",
      "timezone": "Europe/Sofia",
    },
    "id": "40e76a76-924e-4517-b187-018ef8198396",
    "site": "exhausted wretched cyclone",
  },
  {
    "entryTime": {
      "date": "2023-09-13T11:47:46",
      "timezone": "Europe/Rome",
    },
    "id": "2d08c570-7c03-4189-af65-d488d2aa9fce",
    "site": "opulent violent boolean",
  },
  {
    "entryTime": {
      "date": "2023-09-08T11:49:39",
      "timezone": "Europe/Paris",
    },
    "id": "0e6aebe7-6bb6-4a9a-a598-ac36c9a3fe47",
    "site": "frizzy excited outback",
  },
  {
    "entryTime": {
      "date": "2023-08-31T23:59:00",
      "timezone": "America/Sitka",
    },
    "id": "1b29204b-2a86-46a0-826b-54c33f65c5a8",
    "site": "beloved difficult attack",
  },
  {
    "entryTime": {
      "date": "2023-08-31T23:38:46",
      "timezone": "America/Moncton",
    },
    "id": "9a0adb68-8a6b-43a2-8ab8-92f24a016c1d",
    "site": "fearless passionate phone",
  },
  {
    "entryTime": {
      "date": "2023-08-28T03:28:27",
      "timezone": "Indian/Comoro",
    },
    "id": "f8617d39-7d86-4d53-b98b-2de6c162f63d",
    "site": "basic long-term coupon",
  },
  {
    "entryTime": {
      "date": "2023-08-24T13:49:06",
      "timezone": "America/Belize",
    },
    "id": "176cfc8e-41b9-411c-9a53-6577c12b0770",
    "site": "aggravating unhappy vest",
  },
  {
    "entryTime": {
      "date": "2023-08-21T02:29:49",
      "timezone": "Africa/Windhoek",
    },
    "id": "067d9708-46d0-4d52-973e-1ccb85a1d084",
    "site": "nice dear reorganisation",
  },
  {
    "entryTime": {
      "date": "2023-08-19T04:55:17",
      "timezone": "Asia/Seoul",
    },
    "id": "30341dc6-50d3-43fc-950c-e24e7117816c",
    "site": "jumpy canine antechamber",
  },
  {
    "entryTime": {
      "date": "2023-08-13T03:51:50",
      "timezone": "Africa/Kampala",
    },
    "id": "a2216987-1c69-47cb-b22a-de33793e3dce",
    "site": "splendid vital wound",
  },
  {
    "entryTime": {
      "date": "2023-08-10T05:40:43",
      "timezone": "America/North_Dakota/New_Salem",
    },
    "id": "86ebece0-2c0e-43f0-b4c4-20353478d33e",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2023-08-09T04:49:53",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "44ea53d2-24d6-4174-a28d-589b8730eb9e",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-08-06T18:33:35",
      "timezone": "Pacific/Honolulu",
    },
    "id": "2953aa3b-ec66-410f-b8c0-b5c5b55cd46e",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-08-06T00:02:26",
      "timezone": "Africa/Brazzaville",
    },
    "id": "d2508eec-0923-4071-9c27-495839872256",
    "site": "elastic uniform animal",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries belonging to a specific diver 1`] = `
[
  {
    "entryTime": {
      "date": "2024-06-06T11:40:52",
      "timezone": "Asia/Hebron",
    },
    "id": "5d2d1e99-7eb8-48f4-bece-6da91c1f93e3",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2024-05-05T11:56:55",
      "timezone": "Pacific/Efate",
    },
    "id": "f744534a-99b2-48bc-a081-636189d81871",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-04-17T18:04:48",
      "timezone": "Europe/Athens",
    },
    "id": "6a074039-7efd-4efd-93cd-6991e391e309",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-04-04T02:16:50",
      "timezone": "America/Fortaleza",
    },
    "id": "b69cbcb2-4c3a-459f-ab96-96d5972325f3",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2024-03-24T17:14:19",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "2b952128-0c77-4ed4-b7de-00d316da7e88",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2024-03-21T12:11:29",
      "timezone": "Africa/Sao_Tome",
    },
    "id": "c32989ce-ba33-4fc5-ab94-c477dd559d40",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2024-03-14T07:06:05",
      "timezone": "Africa/Maseru",
    },
    "id": "1258bb56-9f90-4514-a765-42f887bcd1e6",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2024-02-11T12:25:35",
      "timezone": "Asia/Kamchatka",
    },
    "id": "110b1760-6d4c-47f9-bf78-026431cd129f",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-01-09T06:05:56",
      "timezone": "Africa/Lagos",
    },
    "id": "e4d1089c-081f-486b-9fd4-200317180754",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2024-01-07T19:45:58",
      "timezone": "Africa/Porto-Novo",
    },
    "id": "d675b414-c335-47db-8969-8d735707c994",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-12-19T16:13:13",
      "timezone": "Pacific/Kosrae",
    },
    "id": "24d678ec-7c2c-4b9a-b0f4-a568e26f85e1",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2023-12-08T20:06:04",
      "timezone": "Europe/Moscow",
    },
    "id": "c788bc9d-ba97-4dd7-a5cc-1ca090071b9d",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-12-08T02:08:34",
      "timezone": "America/Montevideo",
    },
    "id": "2a79cb25-b13b-4c8b-bf8d-6ea3d5381fb3",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2023-11-19T23:18:41",
      "timezone": "America/Detroit",
    },
    "id": "a9e030c6-dc58-4161-8cda-741a14c0c67b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": {
      "date": "2023-11-11T18:30:33",
      "timezone": "America/Phoenix",
    },
    "id": "b6d7161e-54c9-4e6b-869d-6b2824de0604",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-10-31T19:30:24",
      "timezone": "Europe/Vaduz",
    },
    "id": "86f85861-97be-4f52-bd81-4425d8599b79",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": {
      "date": "2023-10-07T06:27:00",
      "timezone": "Asia/Dushanbe",
    },
    "id": "57c60339-924f-4e74-9556-fb8c256fe547",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": {
      "date": "2023-10-06T21:11:16",
      "timezone": "Africa/Freetown",
    },
    "id": "dc8c70c8-d268-49d0-ae4a-abf94d7e4b3c",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2023-09-22T17:13:37",
      "timezone": "Asia/Dubai",
    },
    "id": "cecea137-0a0e-4f21-b86b-bd670aa9503e",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-08-10T05:40:43",
      "timezone": "America/North_Dakota/New_Salem",
    },
    "id": "86ebece0-2c0e-43f0-b4c4-20353478d33e",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries between a start date and end date 1`] = `
[
  {
    "entryTime": {
      "date": "2023-09-22T17:13:37",
      "timezone": "Asia/Dubai",
    },
    "id": "cecea137-0a0e-4f21-b86b-bd670aa9503e",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-09-21T09:11:57",
      "timezone": "Europe/Sofia",
    },
    "id": "40e76a76-924e-4517-b187-018ef8198396",
    "site": "exhausted wretched cyclone",
  },
  {
    "entryTime": {
      "date": "2023-09-13T11:47:46",
      "timezone": "Europe/Rome",
    },
    "id": "2d08c570-7c03-4189-af65-d488d2aa9fce",
    "site": "opulent violent boolean",
  },
  {
    "entryTime": {
      "date": "2023-09-08T11:49:39",
      "timezone": "Europe/Paris",
    },
    "id": "0e6aebe7-6bb6-4a9a-a598-ac36c9a3fe47",
    "site": "frizzy excited outback",
  },
  {
    "entryTime": {
      "date": "2023-08-31T23:59:00",
      "timezone": "America/Sitka",
    },
    "id": "1b29204b-2a86-46a0-826b-54c33f65c5a8",
    "site": "beloved difficult attack",
  },
  {
    "entryTime": {
      "date": "2023-08-31T23:38:46",
      "timezone": "America/Moncton",
    },
    "id": "9a0adb68-8a6b-43a2-8ab8-92f24a016c1d",
    "site": "fearless passionate phone",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search with pagination 1`] = `
[
  {
    "entryTime": {
      "date": "2023-11-17T00:29:41",
      "timezone": "America/Yellowknife",
    },
    "id": "269befe6-730a-4265-918e-0d805df3b174",
    "site": "vast creative spruce",
  },
  {
    "entryTime": {
      "date": "2023-11-16T15:35:25",
      "timezone": "Indian/Antananarivo",
    },
    "id": "3a89f0c9-8ae3-4d13-b873-43f9e4ccb18e",
    "site": "major limping airbag",
  },
  {
    "entryTime": {
      "date": "2023-11-14T20:50:07",
      "timezone": "Indian/Mauritius",
    },
    "id": "9b1271a4-f5d5-4cc0-a2e5-f50ccdd8a9c2",
    "site": "upbeat key cheek",
  },
  {
    "entryTime": {
      "date": "2023-11-11T18:30:33",
      "timezone": "America/Phoenix",
    },
    "id": "b6d7161e-54c9-4e6b-869d-6b2824de0604",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-11-09T00:06:23",
      "timezone": "Asia/Aden",
    },
    "id": "cfbba2d9-e82e-4ba3-a231-c818b0d8a23e",
    "site": "novel frayed dealer",
  },
  {
    "entryTime": {
      "date": "2023-11-03T04:02:25",
      "timezone": "Pacific/Tongatapu",
    },
    "id": "8e4c543b-921b-4404-a068-4b9561212fe5",
    "site": "knowledgeable oily sweatshirt",
  },
  {
    "entryTime": {
      "date": "2023-11-02T12:18:48",
      "timezone": "America/Creston",
    },
    "id": "50e62e56-aa49-47e9-ae7c-4033ae84934b",
    "site": "gigantic whopping chive",
  },
  {
    "entryTime": {
      "date": "2023-10-31T19:30:24",
      "timezone": "Europe/Vaduz",
    },
    "id": "86f85861-97be-4f52-bd81-4425d8599b79",
    "site": "rundown joyous put",
  },
  {
    "entryTime": {
      "date": "2023-10-28T17:42:30",
      "timezone": "Africa/Bujumbura",
    },
    "id": "4ce13d56-ef0b-4d84-9d65-ab977e36c598",
    "site": "happy-go-lucky shiny cartload",
  },
  {
    "entryTime": {
      "date": "2023-10-25T18:15:37",
      "timezone": "Asia/Singapore",
    },
    "id": "e410d356-a210-448b-95a6-76b34017dd33",
    "site": "shallow drafty position",
  },
]
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "asc" order 1`] = `
[
  {
    "entryTime": {
      "date": "2021-06-15T08:57:50",
      "timezone": "Asia/Thimphu",
    },
    "id": "20c34025-b4f0-4dad-b459-4572e98ab695",
    "site": "another submissive subconscious",
  },
  {
    "entryTime": {
      "date": "2021-06-15T10:59:06",
      "timezone": "Africa/Tunis",
    },
    "id": "fc3da09e-f29e-4cca-b194-81afa0673cdd",
    "site": "aromatic steel walrus",
  },
  {
    "entryTime": {
      "date": "2021-06-20T16:24:39",
      "timezone": "Europe/Kirov",
    },
    "id": "a31b78f7-16ae-40ab-80a2-84d391271b6d",
    "site": "intelligent powerful breakpoint",
  },
  {
    "entryTime": {
      "date": "2021-06-21T03:35:31",
      "timezone": "America/Glace_Bay",
    },
    "id": "08a3caca-8665-49b2-a164-6e7d6ed733b9",
    "site": "gruesome welcome expense",
  },
  {
    "entryTime": {
      "date": "2021-06-23T07:17:28",
      "timezone": "America/Swift_Current",
    },
    "id": "087b7193-79a6-4746-8a4b-3d8741a32e90",
    "site": "colorless impressive impropriety",
  },
  {
    "entryTime": {
      "date": "2021-06-23T07:31:50",
      "timezone": "America/North_Dakota/Beulah",
    },
    "id": "c1e1bb4c-934c-4e15-933a-106518fbcf85",
    "site": "warm considerate aspic",
  },
  {
    "entryTime": {
      "date": "2021-06-26T16:18:31",
      "timezone": "America/Fortaleza",
    },
    "id": "d7efc674-7c32-4e1b-ad73-ac2864fde52c",
    "site": "steel truthful auto",
  },
  {
    "entryTime": {
      "date": "2021-06-28T23:25:23",
      "timezone": "America/Belize",
    },
    "id": "8d0dd721-ce0a-4a12-b035-fc4c9c737499",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": {
      "date": "2021-07-01T12:05:11",
      "timezone": "America/Fortaleza",
    },
    "id": "5c5ad14b-7b35-46ad-8094-3f849d3d60ae",
    "site": "short-term scratchy stucco",
  },
  {
    "entryTime": {
      "date": "2021-07-06T15:27:11",
      "timezone": "Australia/Eucla",
    },
    "id": "6321570a-ae7b-4b55-9047-0bc316aee088",
    "site": "simplistic key cupcake",
  },
]
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "desc" order 1`] = `
[
  {
    "entryTime": {
      "date": "2024-06-06T11:40:52",
      "timezone": "Asia/Hebron",
    },
    "id": "5d2d1e99-7eb8-48f4-bece-6da91c1f93e3",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2024-05-23T17:18:05",
      "timezone": "Asia/Macau",
    },
    "id": "183854c7-ce3a-4646-9b81-f28af540302a",
    "site": "offensive monumental teapot",
  },
  {
    "entryTime": {
      "date": "2024-05-11T14:01:32",
      "timezone": "Pacific/Noumea",
    },
    "id": "d6a578dd-e49c-475c-a31b-657d1443a4a3",
    "site": "piercing joyful hospitality",
  },
  {
    "entryTime": {
      "date": "2024-05-09T06:43:36",
      "timezone": "Pacific/Auckland",
    },
    "id": "2e75b4b9-2f3a-42b7-8137-c25768582d76",
    "site": "wonderful useful magnet",
  },
  {
    "entryTime": {
      "date": "2024-05-05T11:56:55",
      "timezone": "Pacific/Efate",
    },
    "id": "f744534a-99b2-48bc-a081-636189d81871",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-04-29T00:32:36",
      "timezone": "America/North_Dakota/Beulah",
    },
    "id": "dcfb5adb-ee15-4741-a2e9-482cc4467fb6",
    "site": "tattered worn graffiti",
  },
  {
    "entryTime": {
      "date": "2024-04-28T01:35:07",
      "timezone": "Africa/Kinshasa",
    },
    "id": "c5e1b02c-86e2-4e84-bcc3-f53b054d3ecf",
    "site": "mixed honest workforce",
  },
  {
    "entryTime": {
      "date": "2024-04-26T12:20:33",
      "timezone": "Asia/Baghdad",
    },
    "id": "36fb40c0-2738-4b62-9158-3ee90bd684e6",
    "site": "wonderful useful magnet",
  },
  {
    "entryTime": {
      "date": "2024-04-17T18:04:48",
      "timezone": "Europe/Athens",
    },
    "id": "6a074039-7efd-4efd-93cd-6991e391e309",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-04-13T11:21:10",
      "timezone": "Pacific/Guam",
    },
    "id": "99347e59-18be-4c6a-b164-3379c26485f2",
    "site": "quiet complete current",
  },
]
`;

exports[`Log entries service when listing recent dive sites will return a distinct list of the most recently used dive sites 1`] = `
[
  {
    "id": "f2026af7-0f73-4fc0-b29b-491dc2846842",
    "name": "caring nutty grub",
  },
  {
    "id": "c14340a8-858b-478e-8308-c800149777a7",
    "name": "damp forsaken chapter",
  },
  {
    "id": "4e87dc06-4d51-4d11-ba93-37e51924ff44",
    "name": "deadly lean mobile",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "4d91a56c-f68a-4c11-9b06-ed1030cecec0",
    "name": "meaty weird good",
  },
  {
    "id": "366e96ef-045d-464e-9a2f-7c92074cc41a",
    "name": "old-fashioned unwieldy cartridge",
  },
  {
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "name": "original pitiful resource",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "3b9bdf22-0b5b-4f6b-9ec4-f5dfdb0bebe1",
    "name": "specific dead ramen",
  },
  {
    "id": "58f628bf-dc5e-449e-8ee0-7248d1abff26",
    "name": "utter extraneous calm",
  },
  {
    "id": "ed537618-c11d-468c-9e88-867c288e649f",
    "name": "well-worn upbeat trillion",
  },
]
`;
